--- a/src/app.html
+++ b/src/app.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-	
+
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -10,4 +10,6 @@
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 
+	<div class="erase"></div>
+	
 </html>
