--- a/src/app.html
+++ b/src/app.html
@@ -9,7 +9,6 @@
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
-
-	<div class="erase"></div>
 	
+	<a href="/groep-2F">TEST</a>
 </html>
